<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!-- TODO 使用PopMenu 会更好 -->
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/classify"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_index"
        android:title="@string/pid"
        app:showAsAction="never"
        tools:showAsAction="never" />

    <item
        android:id="@+id/menu_me"
        android:title="@string/me"
        app:showAsAction="never"
        tools:showAsAction="never" />


</menu>