<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.by5388.ditiezu.search.SearchFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <RadioGroup
            android:id="@+id/radioGroupSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/radioButton1"
                style="@style/PublishButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/article_tizie" />

            <RadioButton
                android:id="@+id/radioButton2"
                style="@style/PublishButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_wenzhang" />
        </RadioGroup>

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroupSearch" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/hint_search_key"
            app:layout_constraintBottom_toBottomOf="@id/buttonSearch"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/buttonSearch"
            app:layout_constraintTop_toTopOf="@id/buttonSearch" />

        <LinearLayout
            android:id="@+id/linearLayout_time_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/buttonSearch">

            <!-- todo 为什么要使用下面这个样式-->
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/button_background_publish"
                android:text="@string/filter_four_hours" />

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/filter_day" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_week" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_month"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_hot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_time_filter">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_hot" />

            <!--            <Button-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="地铁" />-->

            <!--            <Button-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="网刊" />-->

            <!--            <Button-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="地铁族" />-->
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_history"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/image_delete_history"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_delete_history" />

        <ImageView
            android:id="@+id/image_delete_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_delete"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_hot" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            app:adapter="@{fragment.searchAdapter}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/image_delete_history"
            tools:listitem="@layout/item_search_history" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>