<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/textView_vote_tip_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote_tip_0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_vote_tip_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote_tip_1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText_input_vote_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:minHeight="120dp"
                android:gravity="top"
                android:singleLine="false"
                app:layout_constraintTop_toBottomOf="@id/textView_vote_tip_0" />

            <LinearLayout
                android:id="@+id/linearLayout_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/editText_input_vote_list">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="最多可选 " />

                <EditText
                    android:id="@+id/editText_max_count"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:text="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 项,记票天数 " />

                <EditText
                    android:id="@+id/editText_input_day"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="天" />
            </LinearLayout>


            <CheckBox
                android:id="@+id/checkedTextView_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="投票后结果可见"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/checkedTextView_user"
                app:layout_constraintTop_toBottomOf="@id/linearLayout_input" />

            <CheckBox

                android:id="@+id/checkedTextView_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="公开投票参与人"
                app:layout_constraintLeft_toRightOf="@id/checkedTextView_result"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearLayout_input" />


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintLeft_toRightOf="@id/textView_theme"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkedTextView_result" />

            <TextView
                android:id="@+id/textView_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/select_theme"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/spinner"
                app:layout_constraintTop_toTopOf="@id/spinner" />

            <TextView
                android:id="@+id/textView_article_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/article_title"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner" />

            <EditText
                android:id="@+id/editText_article_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/textView_article_title" />

            <EditText
                android:id="@+id/editText_article_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="top"
                android:inputType="text"
                android:minHeight="120dp"
                android:minLines="3"
                android:singleLine="false"
                app:layout_constraintBottom_toTopOf="@id/button_submit"
                app:layout_constraintTop_toBottomOf="@id/editText_article_title" />


            <Button
                android:id="@+id/button_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/submit_article"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="@id/button_upload_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <Button
                android:id="@+id/button_upload_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/upload_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>