<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="fragment"
            type="com.by5388.ditiezu.user.LoginFragment" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/login_bg">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_login_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo_in"
                app:layout_constraintBottom_toTopOf="@id/container_input"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/container_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/drawable_login_bg"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_login_in">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_account">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_account"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />


                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/editText_secure_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/imageView_secure"
                    app:layout_constraintTop_toBottomOf="@id/editText_password"
                    tools:hint="@string/hint_secure_code" />

                <ImageView
                    android:id="@+id/imageView_secure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/editText_secure_code"
                    app:layout_constraintLeft_toRightOf="@id/editText_secure_code"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editText_password"
                    tools:src="@drawable/p_1" />

                <Spinner
                    android:id="@+id/spinner_secure_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/question_item"
                    android:visibility="@{fragment.isShowSecureQuestion() ? View.VISIBLE : View.GONE}"
                    app:layout_constraintTop_toBottomOf="@id/editText_secure_code"
                    tools:visibility="visible" />

                <EditText
                    android:id="@+id/editText_secure_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:visibility="@{fragment.isShowSecureQuestion() ? View.VISIBLE : View.GONE}"
                    app:layout_constraintTop_toBottomOf="@id/spinner_secure_question"
                    tools:hint="@string/hint_secure_code"
                    tools:visibility="visible" />

                <!-- TODO  圆角按钮  -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_reset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:background="#f60"
                        android:text="@string/reset_text"
                        android:textColor="#FFF"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/switch_show_question"
                        app:layout_constraintTop_toBottomOf="@+id/editText_secure_answer" />

                    <Switch
                        android:id="@+id/switch_show_question"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:background="#f60"
                        android:text="@string/show_question"
                        android:textColor="#FFF"
                        app:layout_constraintBottom_toBottomOf="@id/button_reset"
                        app:layout_constraintLeft_toRightOf="@id/button_reset"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/button_reset" />


                </LinearLayout>


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_login" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>